sound: Use glib to get the XDG dirs

Instead of processing the environment variables by hand.

https://bugzilla.gnome.org/show_bug.cgi?id=691589